--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "private": true,
   "license": "BSD-3-Clause",
+  "type": "module",
   "scripts": {
     "public_suffix_list": "coffee utils/public_suffix_list.coffee",
-    "start": "webpack-dev-server --open --mode=development",
+    "start": "vite --config vite.web.config.js",
     "test:unit": "karma start --single-run",
     "test:lint": "eslint .",
-    "test": "npm run test:lint && npm run test:unit"
+    "test": "npm run test:lint && npm run test:unit",
+    "build:web": "vite build --config vite.web.config.js --base ''",
+    "build:crx": "vite build --config vite.crx.config.js --base ''"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -24,9 +27,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^2.0.13",
     "phantomjs-prebuilt": "^2.1.7",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "vite": "^7.2.2"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1"
