Format with prettier.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
     "extends": "standard",
-    "plugins": [
-        "standard",
-        "promise"
-    ],
+    "plugins": ["standard", "promise"],
     "parserOptions": {
         "sourceType": "module"
     },
