--- a/src/crx/public/manifest.json
+++ b/src/crx/public/manifest.json
@@ -8,9 +8,11 @@
         "default_popup": "popup.html",
         "default_title": "__MSG_extension_name__"
     },
-    "content_scripts": [{
-        "matches": ["<all_urls>"],
-        "js": ["js/content.js"]
-    }],
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["js/content.js"]
+        }
+    ],
     "permissions": ["tabs"]
 }
