--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
-  "private": true,
-  "license": "BSD-3-Clause",
-  "type": "module",
-  "scripts": {
-    "public_suffix_list": "coffee utils/public_suffix_list.coffee",
-    "start": "vite --config vite.web.config.js",
-    "test:unit": "karma start --single-run",
-    "test:lint": "eslint .",
-    "test": "npm run test:lint && npm run test:unit",
-    "build:web": "vite build --config vite.web.config.js --base ''",
-    "build:crx": "vite build --config vite.crx.config.js --base ''"
-  },
-  "devDependencies": {
-    "@eslint/css": "^0.14.1",
-    "@eslint/js": "^9.39.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "coffeescript": "^2.2.2",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "globals": "^16.5.0",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-webpack": "^2.0.13",
-    "phantomjs-prebuilt": "^2.1.7",
-    "prettier": "3.6.2",
-    "vite": "^7.2.2"
-  },
-  "dependencies": {
-    "crypto-js": "^3.1.9-1"
-  }
+    "private": true,
+    "license": "BSD-3-Clause",
+    "type": "module",
+    "scripts": {
+        "public_suffix_list": "coffee utils/public_suffix_list.coffee",
+        "start": "vite --config vite.web.config.js",
+        "test:unit": "karma start --single-run",
+        "test:lint": "eslint .",
+        "test": "npm run test:lint && npm run test:unit",
+        "build:web": "vite build --config vite.web.config.js --base ''",
+        "build:crx": "vite build --config vite.crx.config.js --base ''"
+    },
+    "devDependencies": {
+        "@eslint/css": "^0.14.1",
+        "@eslint/js": "^9.39.1",
+        "@rollup/plugin-commonjs": "^29.0.0",
+        "@rollup/plugin-node-resolve": "^16.0.3",
+        "coffeescript": "^2.2.2",
+        "eslint": "^9.39.1",
+        "eslint-config-prettier": "^10.1.8",
+        "globals": "^16.5.0",
+        "jasmine-core": "^5.12.1",
+        "karma": "^6.4.4",
+        "karma-chrome-launcher": "^3.2.0",
+        "karma-jasmine": "^5.1.0",
+        "karma-rollup-preprocessor": "^7.0.8",
+        "prettier": "3.6.2",
+        "vite": "^7.2.2"
+    },
+    "dependencies": {
+        "crypto-js": "^3.1.9-1"
+    }
 }
