--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "test:lint": "eslint .",
         "test": "npm run test:lint && npm run test:unit",
         "build:web": "vite build --config vite.web.config.js --base ''",
-        "build:crx": "vite build --config vite.crx.config.js --base ''"
+        "build:crx": "vite build --config vite.crx.config.js --base ''",
+        "build:crx_debug": "vite build --config vite.crx.config.js --base '' --sourcemap inline --minify false"
     },
     "devDependencies": {
         "@eslint/css": "^0.14.1",
