--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vite": "^7.2.2"
     },
     "dependencies": {
-        "crypto-js": "^4.2.0"
+        "crypto-js": "^4.2.0",
+        "jdenticon": "^3.3.0"
     }
 }
