--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "devDependencies": {
         "@eslint/css": "^0.14.1",
         "@eslint/js": "^9.39.1",
-        "@rollup/plugin-commonjs": "^29.0.0",
-        "@rollup/plugin-node-resolve": "^16.0.3",
         "coffeescript": "^2.2.2",
         "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
@@ -24,6 +22,7 @@
         "jasmine-core": "^5.12.1",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
+        "karma-esbuild": "^2.3.0",
         "karma-jasmine": "^5.1.0",
         "karma-rollup-preprocessor": "^7.0.8",
         "prettier": "3.6.2",
