--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "test": "npm run test:prettier && npm run test:lint && npm run test:unit",
         "build:web": "vite build --config vite.web.config.js --base ''",
         "build:crx": "vite build --config vite.crx.config.js --base ''",
-        "build:crx_debug": "vite build --config vite.crx.config.js --base '' --sourcemap inline --minify false"
+        "build:crx_debug": "vite build --config vite.crx.config.js --base '' --sourcemap inline --minify false --watch"
     },
     "devDependencies": {
         "@eslint/css": "^0.14.1",
